# ai_manga_workflow

./: .dockerignore  .gitignore  Dockerfile  GITHUB_UPLOAD_GUIDE.md  README.md  README_EN.md  agent.py  client.py  deploy.sh  main.py  prompts.py  pyproject.toml  requirements.txt
sub_agents/: art_agent.py  badcase_optimizer_agent.py  director_agent.py  editor_agent.py  motion_agent.py  screenwriter_agent.py
tools/: veadk_wrappers.py  viking_tools.py
tools/tos_tools/: __init__.py  file_download.py  tos_upload.py
veadk/: __init__.py  agent.py  agent_builder.py  config.py  consts.py  runner.py  types.py  version.py
veadk/a2a/: agent_card.py  remote_ve_agent.py  ve_a2a_server.py  ve_agent_executor.py  ve_middlewares.py  ve_task_store.py
veadk/agents/: loop_agent.py  parallel_agent.py  sequential_agent.py  supervise_agent.py
veadk/auth/: base_auth.py  ve_credential_service.py
veadk/cli/: cli.py  cli_agentkit.py  cli_clean.py  cli_create.py  cli_deploy.py  cli_eval.py  cli_init.py  cli_kb.py  cli_pipeline.py  cli_prompt.py  cli_rl.py  cli_update.py  cli_uploadevalset.py  cli_web.py
veadk/cloud/: cloud_agent_engine.py  cloud_app.py
veadk/configs/: auth_configs.py  database_configs.py  dynamic_config_manager.py  model_configs.py  tool_configs.py  tracing_configs.py
veadk/evaluation/: __init__.py  base_evaluator.py  eval_set_file_loader.py  eval_set_recorder.py  types.py
veadk/examples/: in_memory_example_store.py  types.py
veadk/flows/: supervise_auto_flow.py  (+1 more)
vikingdb/: __init__.py  _client.py  auth.py  exceptions.py  request_options.py  version.py
(+213 files in other folders)
